tried to fix the views options from overlapping - but awy lesa

--- a/src/Components/Codefixer/MainView.css
+++ b/src/Components/Codefixer/MainView.css
@@ -4,7 +4,6 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  z-index: 1;
 }
 
 .codefixer-area {
